# estructuras-proyecto

./: CMakeLists.txt  CategoriaListaDobleLineal.cpp  CategoriaListaDobleLineal.h  README.md  Video.cpp  Video.h  VideoListaDobleCircular.cpp  VideoListaDobleCircular.h  main.cpp  nodoDCVideo.cpp  nodoDCVideo.h  nodoDLCategoria.cpp  nodoDLCategoria.h
