cmake_minimum_required(VERSION 3.25)
project(estructuras_proyecto)

set(CMAKE_CXX_STANDARD 17)

add_executable(estructuras_proyecto main.cpp Video.cpp Video.h nodoDCVideo.cpp nodoDCVideo.h VideoListaDobleCircular.cpp VideoListaDobleCircular.h nodoDLCategoria.cpp nodoDLCategoria.h CategoriaListaDobleLineal.cpp CategoriaListaDobleLineal.h)
